fixed img overlap on mobile

--- a/app/static/styles/about.css
+++ b/app/static/styles/about.css
@@ -23,8 +23,8 @@
 
 
 .card {
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 22%;
+    margin-right: 22%;
     margin-top: 5%;
     text-align: center;
 }
@@ -47,7 +47,8 @@
     border: 1px solid white;
 
     position: relative;
-    top: 60px;
+    top: 30px;
+    margin-top: 50px;
 }
 
 .img-hobby2 {
@@ -56,7 +57,8 @@
     border: 1px solid white;
 
     position: relative;
-    top: 30px;
+   
+    margin-top: 50px;
 }
 
 
