--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -6,11 +6,7 @@ body {
     margin: 0px;
 }
 
-.nav-logo img {
-    width: 50px;
-    margin-right: 30px;
-    margin-left: 10px;
-}
+
 
 .intro,
 .about,
